# HaloLyricSync

./: .gitignore  HaloPixelBar.spec  README.md  pyproject.toml  requirements.txt  run.bat
docs/: address_scanner.py  usb_protocol.md  如何查看指针扫描结果.md
src/: __init__.py  api_server.py  cloudmusic_reader.py  config.py  hid_comm.py  hid_packet_builder.py  lrc_parser.py  main.py  memory_reader.py  netease_api.py  usb_comm.py
src/source/: __init__.py  base.py  cloudmusic.py  factory.py  lx_lyric_player.py  lxmusic.py  memory.py
tests/: test_config.py  test_hid_packet.py  test_integration.py  test_lyrics_parser.py  test_snapshot.py
