[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-lyric-sync"
version = "1.1.0"
description = "HALO PIXELBAR 歌词同步器 - 通过 LX Music 开放 API 实时同步歌词到音箱"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "hidapi>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
tray = ["pystray>=0.19", "Pillow>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
